--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.13",
     "nodemon": "^2.0.6"
   }
 }
